# winteros-detect-hardware

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: release.yml
src/: config_file.rs  driver_config.rs  hardware_driver.rs  list_hardware_module.rs  main.rs
src/system_info/: computer_info.rs  cpu_info.rs  mod.rs  vga_info.rs
