[package]
name = "winteros-detect-hardware"
version = "1.0.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.140"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking"] }
futures-util = "0.3.31"
nix = { version = "0.29.0", features = ["user"] }
